--- a/src/components/color-selector/color-selector.css
+++ b/src/components/color-selector/color-selector.css
@@ -1,6 +1,9 @@
 .color-picker {
   width: 100% !important;
   height: fit-content !important;
+  position: sticky !important;
+  top: 0 !important;
+  z-index: 1 !important;
 }
 
 .color-picker .react-colorful__saturation {
@@ -14,4 +17,10 @@
   width: 100%;
   height: 10px;
   border-radius: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .color-picker .react-colorful__saturation {
+    height: var(--search-height);
+  }
 }
