--- a/src/components/list-item/list-item.module.css
+++ b/src/components/list-item/list-item.module.css
@@ -1,17 +1,43 @@
 .list_item {
+  --padding-block: 0.5rem;
+  --padding-inline: 1rem;
+
+  --height: 60px;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 1rem;
-  padding: 0.4rem 1rem;
+  gap: var(--padding-inline);
+  padding: var(--padding-block) var(--padding-inline);
+
   border-bottom: 1px solid #ccc;
   position: relative;
   overflow: hidden;
-  height: 60px;
+  height: var(--height);
 }
 
-.list_item:hover {
-  backdrop-filter: brightness(1.2);
+.list_item::before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: var(--height);
+  background-color: var(--color-blue-opacity);
+  transform: translateX(-100%);
+  transition: transform 0.3s ease;
+}
+
+.list_item:hover.list_item:before {
+  transform: translateX(0);
+}
+
+.list_item:is(.favorite):hover {
+  color: var(--color-white);
+}
+
+.list_item:is(.favorite) {
+  animation: slideIn var(--transition);
 }
 
 .icon {
@@ -35,12 +61,47 @@
 
 h3 {
   display: flex;
-  gap: 1rem;
+  gap: var(--padding-inline);
   width: 100%;
-  font-weight: 500;
+  font-weight: var(--heading-weight);
   justify-content: space-between;
 }
 
 h3 span {
-  font-weight: 400;
+  font-weight: var(--par-weight);
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes close {
+  from {
+    padding: var(--padding-block) var(--padding-inline);
+    border-bottom: 1px solid #ccc;
+    max-height: var(--height);
+  }
+  to {
+    padding: 0 var(--padding-inline);
+    max-height: 0;
+    border-bottom: none;
+  }
+}
+
+@keyframes open {
+  from {
+    padding: 0 var(--padding-inline);
+    max-height: 0;
+    border-bottom: none;
+  }
+  to {
+    padding: var(--padding-block) var(--padding-inline);
+    border-bottom: 1px solid #ccc;
+    max-height: var(--height);
+  }
 }
