--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -1,19 +1,26 @@
 .search_input {
   width: 100%;
-  height: 40px;
-  border: 1px solid #ccc;
-  padding: 1rem;
-  font-size: 16px;
+  border: 1px solid var(--color-gray);
+  padding: var(--padding-block) var(--padding-inline);
+  font-size: var(--font-size-heading-md);
   outline: none;
   box-sizing: border-box;
-  margin-bottom: 10px;
   transition: all 0.3s ease;
+
+  grid-column: span 2;
 }
 
-.search_input:focus {
-  border-color: #007bff;
+.search_input:focus,
+.search_input:hover {
+  border-color: var(--color-blue);
 }
 
 .search_input::placeholder {
-  color: #ccc;
+  color: var(--color-gray);
+}
+
+@media screen and (max-width: 768px) {
+  .search_input {
+    grid-column: span 1;
+  }
 }
